--- a/RecurringLottery/package.json
+++ b/RecurringLottery/package.json
@@ -1,6 +1,10 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "test": "hardhat test"
+  },
   "dependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.1"
+    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "web3": "^1.8.1"
   }
 }
